# kyykkacom

./: .git-blame-ignore-revs  .gitignore  README.md  import_matches.py  manage.py  matches.csv  new_nkl_news.csv  pyproject.toml  requirements.txt  router.js  todo
api/: query_utils.py  tests.py  urls.py  views.py
api/views/: __init__.py  admin_api.py  auth_api.py  match_api.py  other_apis.py  permissions.py  player_api.py  team_api.py  throw_api.py
backend/: admin.py  apps.py  models.py  old_models.py  serializers.py  tests.py  urls.py  utils.py  views.py
backend/migrations/: 0001_initial.py  0001_squashed_0019_auto_20231119_1734.py  0002_auto_20190319_0910.py  0003_auto_20190324_2006.py  0004_auto_20190325_1426.py  0005_player.py  0006_auto_20190328_1807.py  0007_auto_20190402_2133.py  0008_auto_20190402_2135.py  0009_auto_20190402_2244.py  0010_auto_20200107_0300.py  0011_auto_20200112_1313.py  0012_auto_20200114_0337.py  0013_match_post_season.py  0014_auto_20231119_1244.py  0015_teamsinseason_bracket.py  0016_auto_20231119_1454.py  0017_auto_20231119_1504.py  0018_auto_20231119_1624.py  0019_auto_20231119_1734.py  0020_auto_20240901_1812.py  0021_auto_20240905_1651.py  0022_auto_20240905_1742.py  0023_auto_20240905_1851.py  0024_auto_20240906_1132.py  0025_seasonstats_gte_six.py  0026_auto_20240906_1252.py  0027_positionstats_periods.py  0028_auto_20240911_1640.py
data/: NKL Tilastoja - Kaikki Joukkueet kausittain.csv  NKL Tilastoja - Kaikki Pelaajat.csv  NKL Tilastoja - Kaikki Pelit.csv
frontend/: .env  .env.production  components.d.ts  index.html  jsconfig.json  package-lock.json  package.json  tsconfig.json  typed-router.d.ts  vite.config.mjs
frontend/public/: index.html
frontend/src/: App.vue  main.js  main_jotain.js  news.json  router.js
kyykka/: admin.py  admin_forms.py  apps.py  models.py  serializers.py  urls.py  views.py
kyykka/migrations/: 0016_auto_20231119_1454.py  0017_auto_20231119_1504.py  0020_auto_20240218_1745.py  0020_auto_20241229_1323.py  0021_auto_20241230_2232.py  0021_auto_20250113_2046.py  0022_auto_20250113_2212.py  0022_auto_20250117_1019.py  0023_auto_20250119_1923.py  0023_auto_20250120_1741.py  0024_auto_20250126_1817.py  0025_auto_20250126_1840.py  0026_auto_20250213_2247.py  0027_alter_player_number_alter_playersinteam_player_and_more.py  0028_match_result.py  0028_teamsinseason_logo_uploaded_at_and_more_squashed_0030_alter_teamsinseason_logo_url.py  0029_accolade_playeraccolade_teamaccolade.py  0030_userproxy_remove_accolade_is_player_accolade_and_more.py  0031_accolade_icon_alter_throw_player.py  0031_alter_teamsinseason_logo_url.py
nkl/: __init__.py  local_settings.py  poista.py  settings.py  urls.py
utils/: caching.py  dummyGen.py  import_data.py  import_matches.py  import_news_csv.py  import_team_csv.py
(+118 files in other folders)
